k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: dropflow-backend
  namespace: dropflow
spec:
  type: ClusterIP
  selector:
    app: dropflow-backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3004
