k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dropflow-backend
  namespace: dropflow
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - api-dropflow.lulochat.com
      secretName: dropflow-backend-ingress-tls
  rules:
    - host: api-dropflow.lulochat.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dropflow-backend
                port:
                  number: 80
